-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Test sometimes reports the "BUG" below.
This was introduced in Commit b32e55b600ca ("LU-7638 recovery: do not abort update recovery.") and is easily fixed by dropping the spinlock while waiting.
[ 1705.879495] BUG: sleeping function called from invalid context at /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_lib.c:2124
[ 1705.885402] in_atomic(): 1, irqs_disabled(): 0, pid: 6663, name: tgt_recover_0
[ 1705.886874] CPU: 3 PID: 6663 Comm: tgt_recover_0 Kdump: loaded Tainted: P OE ------------ 3.10.0-7.7-debug #1
[ 1705.889723] Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
[ 1705.890830] Call Trace:
[ 1705.891378] [<ffffffff817d1711>] dump_stack+0x19/0x1b
[ 1705.892744] [<ffffffff810c71f9>] __might_sleep+0xd9/0x100
[ 1705.894273] [<ffffffffa061af13>] target_recovery_overseer+0x4a3/0x6d0 [ptlrpc]
[ 1705.895782] [<ffffffffa0618140>] ? libcfs_nid2str+0x20/0x20 [ptlrpc]
[ 1705.897142] [<ffffffffa01efce7>] ? __cfs_fail_timeout_set+0x1a7/0x220 [libcfs]
[ 1705.899177] [<ffffffffa0623172>] replay_request_or_update.isra.22+0xf2/0x8c0 [ptlrpc]
[ 1705.900844] [<ffffffffa0623940>] ? replay_request_or_update.isra.22+0x8c0/0x8c0 [ptlrpc]
[ 1705.903035] [<ffffffffa0623fa5>] target_recovery_thread+0x665/0x10c0 [ptlrpc]
[ 1705.904882] [<ffffffffa0623940>] ? replay_request_or_update.isra.22+0x8c0/0x8c0 [ptlrpc]
[ 1705.906752] [<ffffffff810b8254>] kthread+0xe4/0xf0
[ 1705.907788] [<ffffffff810b8170>] ? kthread_create_on_node+0x140/0x140
[ 1705.908970] [<ffffffff817e5ddd>] ret_from_fork_nospec_begin+0x7/0x21
[ 1705.910492] [<ffffffff810b8170>] ? kthread_create_on_node+0x140/0x140